# LeRobot

./: .gitignore  README.md  setup.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/so101_description/share/so101_description/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/so101_description/share/so101_description/launch/: display.launch.py
install/so101_description/share/so101_description/urdf/: so101_new_calib.urdf
log/: latest_build
src/camera_tf/: package.xml  setup.cfg  setup.py
src/camera_tf/camera_tf/: camera_frame.py
src/camera_vision/: package.xml  setup.cfg  setup.py
src/camera_vision/camera_vision/: camera_viewer.py
src/rviz_objects/: package.xml  setup.cfg  setup.py
src/rviz_objects/rviz_objects/: cube_marker.py
src/so101_description/: setup.py
src/so101_description/launch/: display.launch.py
src/so101_description/test/: test_flake8.py
src/so101_description/urdf/: so101_new_calib.urdf
src/so101_gazebo/: CMakeLists.txt  package.xml
src/so101_gazebo/launch/: cube_attach.launch.py  cube_tf.launch.py  final_ground_cube_pick_place.launch.py  final_so101_gazebo_pick_place.launch.py  full_auto_pick_place.launch.py  full_auto_pick_place_with_camera.launch.py  ground_cube_alignment_test.launch.py  ground_cube_vision_test.launch.py  ground_pose_pick_place.launch.py  move_group_gazebo.launch.py  spawn_so101_gazebo.launch.py  spawn_so101_ground_cube.launch.py  spawn_so101_multi_cube.launch.py  spawn_so101_multi_cube_drop_zone.launch.py  vision_center_then_pick.launch.py  wrist_camera_bridge.launch.py  wrist_vision_test.launch.py
src/so101_gazebo/scripts/: center_then_pick_sequence.py  dynamic_gazebo_cube_pose_publisher.py  gazebo_cube_attach.py  gazebo_cube_dynamic_attach.py  gazebo_pick_place_sequence.py  gazebo_v1_demo_setup.py  ground_cube_alignment_check.py  ground_cube_camera_search.py  ground_pose_pick_sequence.py  simple_gripper_tf.py  v4_camera_cube_pose_publisher.py  v5_random_cube_positioner.py  visual_servo_centering_sequence.py  visual_servo_error.py  visual_servo_pan_controller.py  visual_servo_wrist_controller.py  wrist_color_detector.py  wrist_cube_center_detector.py  wrist_vision_test_setup.py
src/so101_gazebo/urdf/: so101_gazebo.urdf
src/so101_gazebo/worlds/: so101_empty.sdf  so101_ground_cube.sdf  so101_multi_cube.sdf  so101_multi_cube_drop_zone.sdf
src/so101_moveit_config/: .setup_assistant  package.xml
src/so101_moveit_config/config/: joint_limits.yaml  moveit.rviz  ompl_planning.yaml  ros2_controllers.yaml  so101_new_calib.srdf
src/so101_moveit_cpp/: CMakeLists.txt  package.xml
src/so101_moveit_cpp/launch/: cube_pick_demo.launch.py  reach_cube_position.launch.py  v3_final_moveit_pick_place.launch.py  v3_moveit_cube_joint_pick_fast.launch.py  v3_moveit_cube_joint_pick_gui.launch.py  v3_moveit_cube_joint_pick_with_attach_gui.launch.py  v3_moveit_ik_target_test_gui.launch.py  v3_moveit_joint_test.launch.py  v3_moveit_joint_test_gui.launch.py  v4_camera_derived_pick_place.launch.py  v5_random_cube_position_pick.launch.py  v6_multi_cube_red_only_pick.launch.py  v7_random_red_with_distractors.launch.py  v9_clean_red_target_drop_zone.launch.py
src/so101_moveit_cpp/src/: moveit_pick_from_cube.cpp  moveit_pick_sequence.cpp  moveit_reach_cube_position.cpp  v3_moveit_cube_joint_pick.cpp  v3_moveit_ik_target_test.cpp
